--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -47,7 +47,7 @@
 
 \newacronym[description={genetic relationship matrix}]{grm}{GRM}{genetic relationship matrix}
 
-\newacronym[description={False discovery rate}]{fdr}{FDR}{false discovery rate}
+\newacronym[description={false discovery rate}]{fdr}{FDR}{false discovery rate}
 
 \newacronym[description={principal component analysis}]{pca}{PCA}{principal component analysis}
 \newacronym[description={principal component}, descriptionplural={Principal components}, plural ={PCs}]{pc}{PC}{principal component}
