--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -27,7 +27,7 @@
 \newcommand{\blandscape}{\begin{landscape}}
 \newcommand{\elandscape}{\end{landscape}}
 \newcommand{\tex}[1]{#1}
-
+\usepackage{pdfpages}
 \usepackage[acronym,style=super,nogroupskip,nonumberlist]{glossaries}
 \usepackage{booktabs}
 \usepackage{longtable}
