--- a/references.bib
+++ b/references.bib
@@ -4785,3 +4785,288 @@ title = {{LDlink: A web-based application for exploring population-specific hapl
 volume = {31},
 year = {2015}
 }
+
+@article{Clark1993,
+abstract = {Lapita is a distinctive ceramic style that first appeared in the Bismarck Archipelago about 3600 B.P. and over the next few centuries spread throughout island Melanesia. For many prehistorians the distribution of Lapita sherds identifies the expansion of Austronesian-speaking populations through Oceania. This article addresses the Lapita language question by exploring the implications of the relationship among gamma globulin (Gm) genetics, paleoenvironments, malaria, natural selection, and prehistoric settlement patterns. Archeological sites with Lapita ceramics are consistently located in coastal lowlands, which in some parts of Oceania would have been malarious areas. Drawing on recent evidence that Austronesian-speaking populations in Near Oceania possess a genetic advantage over Non-Austronesian speakers with regard to malaria, we contend that Austronesian speakers have been able to occupy - on a permanent basis - malarious coastal lowlands that were detrimental to Non-Austronesian speakers. It follows, therefore, that the inhabitants of those Lapita sites spoke one or more of the Austronesian languages},
+author = {Clark, Jeffrey T and Kelly, Kevin M},
+doi = {10.1525/aa.1993.95.3.02a00040},
+file = {:home/murraycadzow/Dropbox/Papers/679653.pdf:pdf},
+isbn = {00027294},
+issn = {00027294},
+journal = {American Anthropologist},
+number = {3},
+pages = {612--630},
+title = {{Human Genetics, Paleoenvironments, and Malaria: Relationships and Implications for the Settlement of Oceania}},
+volume = {95},
+year = {1993}
+}
+@article{Hill1985,
+abstract = {Several genetic markers that provide information on population migrations and affinities have been detected by studies of proteins and cellular antigens in blood. Analysis of DNA polymorphisms promises to yield many further population markers, and we report here the distribution of a new alpha-globin gene deletion (-alpha 3.7 III) detected by a restriction enzyme mapping. This is found frequently in Melanesians and Polynesians but not in five other populations in which alpha-thalassemia is prevalent. We used restriction enzyme haplotype analysis to support a single origin for this mutation and propose that it is a useful population marker. Its geographical distribution supports a route through Island Melanesia for the colonizers of Polynesia.},
+author = {Hill, A V and Bowden, D K and Trent, R J and Higgs, D R and Oppenheimer, S J and Thein, S L and Mickleson, K N and Weatherall, D J and Clegg, J B},
+file = {:home/murraycadzow/Dropbox/Papers/ajhg00158-0139.pdf:pdf},
+isbn = {0002-9297},
+issn = {0002-9297},
+journal = {American journal of human genetics},
+keywords = {Chromosome Deletion,DNA Restriction Enzymes,Genes,Genetic Markers,Globins,Globins: genetics,Humans,Melanesia,Mutation,Polynesia,Thalassemia,Thalassemia: epidemiology,Thalassemia: genetics},
+number = {3},
+pages = {571--80},
+pmid = {2988335},
+title = {{Melanesians and Polynesians share a unique alpha-thalassemia mutation.}},
+url = {/pmc/articles/PMC1684581/?report=abstract},
+volume = {37},
+year = {1985}
+}
+@article{Flint1986,
+abstract = {The frequency of alpha+-thalassaemia, but not other unlinked DNA polymorphisms, exhibits an altitude- and latitude-dependent correlation with malaria endemicity throughout Melanesia, supporting the hypothesis that protection against this parasitic disease is the major factor responsible for the high frequencies of haemoglobinopathies in many parts of the world.},
+author = {Flint, J and Hill, A V and Bowden, D K and Oppenheimer, S J and Sill, P R and Serjeantson, S W and Bana-Koiri, J and Bhatia, K and Alpers, M P and Boyce, A J},
+doi = {10.1038/321744a0},
+file = {:home/murraycadzow/Dropbox/Papers/321744a0.pdf:pdf},
+isbn = {0028-0836 (Print)$\backslash$r0028-0836 (Linking)},
+issn = {0028-0836},
+journal = {Nature},
+number = {6072},
+pages = {744--750},
+pmid = {3713863},
+title = {{High frequencies of alpha-thalassaemia are the result of natural selection by malaria.}},
+url = {papers://a4f304c0-1221-416b-a5f4-91fa037bb717/Paper/p3945},
+volume = {321},
+year = {1986}
+}
+
+@article{Cappellini2008,
+abstract = {Glucose-6-phosphate dehydrogenase (G6PD) deficiency is the most common human enzyme defect, being present in more than 400 million people worldwide. The global distribution of this disorder is remarkably similar to that of malaria, lending support to the so-called malaria protection hypothesis. G6PD deficiency is an X-linked, hereditary genetic defect due to mutations in the G6PD gene, which cause functional variants with many biochemical and clinical phenotypes. About 140 mutations have been described: most are single base changes, leading to aminoacid substitutions. The most frequent clinical manifestations of G6PD deficiency are neonatal jaundice, and acute haemolytic anaemia, which is usually triggered by an exogenous agent. Some G6PD variants cause chronic haemolysis, leading to congenital non-spherocytic haemolytic anaemia. The most effective management of G6PD deficiency is to prevent haemolysis by avoiding oxidative stress. Screening programmes for the disorder are undertaken, depending on the prevalence of G6PD deficiency in a particular community.},
+author = {Cappellini, M D and Fiorelli, G},
+doi = {10.1016/S0140-6736(08)60073-2},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0140673608600732-main.pdf:pdf},
+isbn = {1474-547X (Electronic) 0140-6736 (Linking)},
+issn = {1474-547X},
+journal = {Lancet},
+keywords = {and,favism,g6pd and malaria,g6pd defi ciency,important books on these,inherited haemolytic disorders,neonatal jaundice,red cell metabolism,topics,we also referred to,when more than one},
+number = {9606},
+pages = {64--74},
+pmid = {18177777},
+title = {{Glucose-6-phosphate dehydrogenase deficiency.}},
+volume = {371},
+year = {2008}
+}
+
+@article{Zerihun2011,
+abstract = {Objective: To assess the distribution of ABO blood group and their relationship with Plasmodium falciparum (P. falciparum) malaria among febrile outpatients who sought medical attention at Dore Bafeno Health Center, Southern Ethiopia. Methods: A total of 269 febrile outpatients who visited Dore Bafeno Health Center, Southern Ethiopia, were examined for malaria and also tested for ABO blood groups in January 2010. The blood specimens were collected by finger pricking, stained with Geimsa, and examined microscopically. Positive cases of the parasitemia were counted. CareStart™ Malaria Pf/. Pv Combo was also used to test the blood specimens for malaria. ABO blood groups were determined by agglutination test using ERYCLONE{\textregistered} antisera. Data on socio-demographic characteristics and treatment status of the participants were also collected. Chi-square and ANOVA tests were used to assess the difference between frequencies and means, respectively. Results: Out of a total of 269 participants, 178 (66.2{\%}) febrile patients were found to be infected with Plasmodium parasites, among which 146 (54.3{\%}), 28 (10.4{\%}), and 4 (1.5{\%}) belonged to P. falciparum, P. vivax, and mixed infections, respectively. All febrile patients were also tested for ABO blood groups and 51.3{\%}, 23.5{\%}, 21.9{\%} and 3.3{\%} were found to be blood types of O, A, B and AB, respectively. Both total malaria infection and P. falciparum infection showed significant association with blood types (P {\textless} 0.05). The proportion of A or B but not O phenotypes was higher (P {\textless} 0.05) in individuals with P. falciparum as compared with non-infected individuals. The chance of having P. falciparum infection in patients with blood groups A, B and AB was 2.5, 2.5 and 3.3 times more than individuals showing blood O phenotypes, respectively. The mean P. falciparum malaria parasitaemia for blood groups A, B, AB, and O were 3 744/$\mu$L, 1 805/$\mu$L, 5 331/$\mu$L, and 1 515/$\mu$L, respectively (P {\textless} 0.01). Conclusions: The present findings indicate that individuals of blood groups A, B and AB are more susceptible to P. falciparum infection as compared with individuals of blood group O. Nevertheless, further in depth studies are required to clearly establish the role that ABO blood group plays in P. falciparum malaria. {\textcopyright} 2011 Asian Pacific Tropical Biomedical Magazine.},
+author = {Zerihun, Tewodros and Degarege, Abraham and Erko, Berhanu},
+doi = {10.1016/S2221-1691(11)60045-2},
+file = {:home/murraycadzow/Dropbox/Papers/apjtb-01-04-289.pdf:pdf},
+issn = {22211691},
+journal = {Asian Pacific Journal of Tropical Biomedicine},
+keywords = {ABO blood groups,Agglutination test,Association,Blood specimen,CareStart™ Malaria Pf/Pv Combo,Distribution,ERYCLONE{\textregistered} antisera,Ethiopia,Febrile outpatient,Geimsa,Malaria infection,Parasitemia,Plasmodium falciparum malaria,Plasmodium parasite,Plasmodium vivax},
+number = {4},
+pages = {289--294},
+pmid = {23569777},
+title = {{Association of ABO blood group and Plasmodium falciparum malaria in Dore Bafeno Area, Southern Ethiopia}},
+volume = {1},
+year = {2011}
+}
+
+@article{Cserti2015,
+author = {Cserti, Christine M and Dzik, Walter H},
+doi = {10.1182/blood-2007-03-077602.},
+file = {:home/murraycadzow/Dropbox/Papers/2250.full.pdf:pdf},
+journal = {Blood},
+number = {7},
+pages = {2250--2259},
+title = {{Review article The ABO blood group system and Plasmodium falciparum malaria}},
+volume = {110},
+year = {2015}
+}
+
+@article{Simmons1962,
+author = {Simmons, R. T.},
+doi = {10.1002/j.1834-4461.1962.tb01763.x},
+file = {:home/murraycadzow/Dropbox/Papers/Simmons-1962-Oceania.pdf:pdf},
+issn = {00298077},
+journal = {Oceania},
+month = {mar},
+number = {3},
+pages = {198--210},
+title = {{Blood group genes in Polynesians and comparisons with other Pacific peoples}},
+url = {http://doi.wiley.com/10.1002/j.1834-4461.1962.tb01763.x},
+volume = {32},
+year = {1962}
+}
+
+@article{Krishnan2018,
+author = {Krishnan, Mohanraj and Major, Tanya J and Topless, Ruth K and Dewes, Ofa and Yu, Lennex and Thompson, John M D and McCowan, Lesley and de Zoysa, Janak and Stamp, Lisa K. and Dalbeth, Nicola and {Harr{\'{e}} Hindmarsh}, Jennie and Rapana, Nuku and Deka, Ranjan and Eng, Winston W. H. and Weeks, Daniel E. and Minster, Ryan L. and McGarvey, Stephen T. and Viali, Satupa'itea and Naseri, Take and {Sefuiva Reupena}, Muagututi'a and Wilcox, Phillip and Grattan, David and Shepherd, Peter R. and Shelling, Andrew N. and Murphy, Rinki and Merriman, Tony R.},
+doi = {10.1007/s00125-018-4623-1},
+file = {:home/murraycadzow/Dropbox/Papers/10.10072Fs00125-018-4623-1.pdf:pdf},
+issn = {0012-186X},
+journal = {Diabetologia},
+keywords = {association,bmi,crebrf,genetic,m ā ori,obesity,pacific,polynesian,type 2 diabetes},
+month = {may},
+title = {{Discordant association of the CREBRF rs373863828 A allele with increased BMI and protection from type 2 diabetes in Māori and Pacific (Polynesian) people living in Aotearoa/New Zealand}},
+url = {http://link.springer.com/10.1007/s00125-018-4623-1},
+year = {2018}
+}
+
+@book{Ferrero2018,
+abstract = {The identification of therapeutic targets is a critical step in the research and developement of new drugs, with several drug discovery programmes failing because of a weak linkage between target and disease. Genome-wide association studies and large-scale gene expression experiments are providing insights into the biology of several common diseases, but the complexity of transcriptional regulation mechanisms often limits our understanding of how genetic variation can influence changes in gene expression. Several initiatives in the field of regulatory genomics are aiming to close this gap by systematically identifying and cataloguing regulatory elements such as promoters and enhacers across different tissues and cell types. In this Bioconductor workflow, we will explore how different types of regulatory genomic data can be used for the functional interpretation of disease-associated variants and for the prioritisation of gene lists from gene expression experiments.},
+author = {Ferrero, Enrico},
+booktitle = {F1000Research},
+doi = {10.12688/f1000research.13577.2},
+file = {:home/murraycadzow/Dropbox/Papers/7d1583e1-2227-4e96-b8b9-025e4e32841f{\_}13577{\_}-{\_}Enrico{\_}Ferrero{\_}V2.pdf:pdf},
+isbn = {0000000000},
+issn = {2046-1402},
+keywords = {bioconductor,functional genomics,genetics,gwas,integration,multiomics,r,regulatory genomics,rstats,transcriptomics},
+number = {May},
+pages = {121},
+pmid = {29568492},
+title = {{Using regulatory genomics data to interpret the function of disease variants and prioritise genes from expression studies}},
+url = {https://f1000research.com/articles/7-121/v2},
+volume = {7},
+year = {2018}
+}
+
+@article{Sheehan2016,
+abstract = {Given genomic variation data from multiple individuals, computing the likelihood of complex population genetic models is often infeasible. To circumvent this problem, we introduce here a novel likelihood-free inference framework by applying deep learning, a powerful modern technique in machine learning. In contrast to Approximate Bayesian Computation, another likelihood-free approach widely used in population genetics and other fields, deep learning does not require a distance function on summary statistics or a rejection step, and it is robust to the addition of uninformative statistics. To demonstrate that deep learning can be effectively employed to estimate population genetic parameters and learn informative features of data, we focus on the challenging problem of jointly inferring natural selection and demography (in the form of a population size change history). Our method is able to separate the global nature of demography from the local nature of selection, without sequential steps for these two factors. Studying demography and selection jointly is motivated by Drosophila, where pervasive selection confounds demographic analysis. We apply our method to 197 African Drosophila melanogaster genomes from Zambia to infer both their overall demography, and regions of their genome under selection. We find many regions of the genome that have experienced hard sweeps, and fewer under selection on standing variation (soft sweep) or balancing selection. Interestingly, we find that soft sweeps and balancing selection occur more frequently closer to the centromere of each chromosome. In addition, our demographic inference suggests that previously estimated bottlenecks for African Drosophila melanogaster are too extreme, likely due in part to the unaccounted impact of selection.},
+archivePrefix = {arXiv},
+arxivId = {028175},
+author = {Sheehan, Sara and Song, Yun S.},
+doi = {10.1371/journal.pcbi.1004845},
+eprint = {028175},
+file = {:home/murraycadzow/Dropbox/Papers/journal.pcbi.1004845.PDF:PDF},
+isbn = {1553-7358 (Electronic)$\backslash$r1553-734X (Linking)},
+issn = {15537358},
+journal = {PLoS Computational Biology},
+number = {3},
+pages = {1--28},
+pmid = {27018908},
+title = {{Deep Learning for Population Genetic Inference}},
+volume = {12},
+year = {2016}
+}
+
+@article{Schrider2018,
+abstract = {As population genomic datasets grow in size, researchers are faced with the daunting task of making sense of a flood of information. To keep pace with this explosion of data, computational methodologies for population genetic inference are rapidly being developed to best utilize genomic sequence data. In this review we discuss a new paradigm that has emerged in computational population genomics: that of supervised machine learning (ML). We review the fundamentals of ML, discuss recent applications of supervised ML to population genetics that outperform competing methods, and describe promising future directions in this area. Ultimately, we argue that supervised ML is an important and underutilized tool that has considerable potential for the world of evolutionary genomics.},
+author = {Schrider, Daniel R. and Kern, Andrew D.},
+doi = {10.1016/j.tig.2017.12.005},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0168952517302251-main.pdf:pdf},
+isbn = {0168-9525},
+issn = {13624555},
+journal = {Trends in Genetics},
+number = {4},
+pages = {301--312},
+pmid = {29331490},
+publisher = {Elsevier Ltd},
+title = {{Supervised Machine Learning for Population Genetics: A New Paradigm}},
+url = {http://dx.doi.org/10.1016/j.tig.2017.12.005},
+volume = {34},
+year = {2018}
+}
+
+@article{Pybus2015,
+author = {Pybus, Marc and Luisi, Pierre and Dall'Olio, Giovanni Marco and Uzkudun, Manu and Laayouni, Hafid and Bertranpetit, Jaume and Engelken, Johannes},
+doi = {10.1093/bioinformatics/btv493},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pybus et al. - 2015 - Hierarchical boosting a machine-learning framework to detect and classify hard selective sweeps in human populatio.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pybus et al. - 2015 - Hierarchical boosting a machine-learning framework to detect and classify hard selective sweeps in human popula(2).pdf:pdf},
+issn = {1367-4803},
+journal = {Bioinformatics},
+number = {August},
+pages = {btv493},
+title = {{Hierarchical boosting: a machine-learning framework to detect and classify hard selective sweeps in human populations}},
+url = {http://bioinformatics.oxfordjournals.org/lookup/doi/10.1093/bioinformatics/btv493},
+year = {2015}
+}
+
+@article{Yuan2012,
+abstract = {Simulation studies in population genetics play an important role in helping to better understand the impact of various evolutionary and demographic scenarios on sequence variation and sequence patterns, and they also permit investigators to better assess and design analytical methods in the study of disease-associated genetic factors. To facilitate these studies, it is imperative to develop simulators with the capability to accurately generate complex genomic data under various genetic models. Currently, a number of efficient simulation software packages for large-scale genomic data are available, and new simulation programs with more sophisticated capabilities and features continue to emerge. In this article, we review the three basic simulation frameworks--coalescent, forward, and resampling--and some of the existing simulators that fall under these frameworks, comparing them with respect to their evolutionary and demographic scenarios, their computational complexity, and their specific applications. Additionally, we address some limitations in current simulation algorithms and discuss future challenges in the development of more powerful simulation tools.},
+author = {Yuan, Xiguo and Miller, David J. and Zhang, Junying and Herrington, David and Wang, Yue},
+doi = {10.1089/cmb.2010.0188},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Yuan et al. - 2012 - An Overview of Population Genetic Data Simulation.pdf:pdf},
+issn = {1066-5277},
+journal = {Journal of Computational Biology},
+keywords = {backward simulators,disease association study,forward simulators,genome,resampling,simulation},
+number = {1},
+pages = {42--54},
+pmid = {22149682},
+title = {{An Overview of Population Genetic Data Simulation}},
+volume = {19},
+year = {2012}
+}
+
+@article{Ilardo2018,
+abstract = {Understanding the physiology and genetics of human hypoxia tolerance has important medical implications, but this phenomenon has thus far only been investigated in high-altitude human populations. Another system, yet to be explored, is humans who engage in breath-hold diving. The indigenous Bajau people (“Sea Nomads”) of Southeast Asia live a subsistence lifestyle based on breath-hold diving and are renowned for their extraordinary breath-holding abilities. However, it is unknown whether this has a genetic basis. Using a comparative genomic study, we show that natural selection on genetic variants in the PDE10A gene have increased spleen size in the Bajau, providing them with a larger reservoir of oxygenated red blood cells. We also find evidence of strong selection specific to the Bajau on BDKRB2, a gene affecting the human diving reflex. Thus, the Bajau, and possibly other diving populations, provide a new opportunity to study human adaptation to hypoxia tolerance. Video Abstract: [Figure presented] Genetic and physiological adaptations enable the remarkable breath-holding ability of marine nomads.},
+author = {Ilardo, Melissa A. and Moltke, Ida and Korneliussen, Thorfinn S. and Cheng, Jade and Stern, Aaron J. and Racimo, Fernando and {de Barros Damgaard}, Peter and Sikora, Martin and Seguin-Orlando, Andaine and Rasmussen, Simon and van den Munckhof, Inge C.L. and ter Horst, Rob and Joosten, Leo A.B. and Netea, Mihai G. and Salingkat, Suhartini and Nielsen, Rasmus and Willerslev, Eske},
+doi = {10.1016/j.cell.2018.03.054},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0092867418303866-main.pdf:pdf},
+issn = {10974172},
+journal = {Cell},
+keywords = {adaptation,bradykinin,diving reflex,diving response,hypoxia,natural selection,sea nomads,spleen size,thyroid hormone},
+number = {3},
+pages = {569--580.e15},
+pmid = {29677510},
+publisher = {Elsevier Inc.},
+title = {{Physiological and Genetic Adaptations to Diving in Sea Nomads}},
+url = {https://doi.org/10.1016/j.cell.2018.03.054},
+volume = {173},
+year = {2018}
+}
+
+
+@article{Fumagalli2015,
+author = {Fumagalli, M. and Moltke, I. and Grarup, N. and Racimo, F. and Bjerregaard, P. and Jorgensen, M. E. and Korneliussen, T. S. and Gerbault, P. and Skotte, L. and Linneberg, A. and Christensen, C. and Brandslund, I. and Jorgensen, T. and Huerta-Sanchez, E. and Schmidt, E. B. and Pedersen, O. and Hansen, T. and Albrechtsen, A. and Nielsen, R.},
+doi = {10.1126/science.aab2319},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Fumagalli et al. - 2015 - Greenlandic Inuit show genetic signatures of diet and climate adaptation.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Fumagalli et al. - 2015 - Greenlandic Inuit show genetic signatures of diet and climate adaptation(2).pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Fumagalli et al. - 2015 - Greenlandic Inuit show genetic signatures of diet and climate adaptation.xlsx:xlsx},
+isbn = {9780199671656},
+issn = {0036-8075},
+journal = {Science},
+month = {sep},
+number = {6254},
+pages = {1343--1347},
+title = {{Greenlandic Inuit show genetic signatures of diet and climate adaptation}},
+url = {http://www.sciencemag.org/cgi/doi/10.1126/science.aad0584 http://www.sciencemag.org/cgi/doi/10.1126/science.aab2319},
+volume = {349},
+year = {2015}
+}
+
+@article{Huerta-Sanchez2014,
+author = {Huerta-S{\'{a}}nchez, Emilia and Jin, Xin and Bianba, Zhuoma and Peter, Benjamin M. and Vinckenbosch, Nicolas and Liang, Yu and Yi, Xin and He, Mingze and Somel, Mehmet and Ni, Peixiang and Wang, Bo and Ou, Xiaohua and Luosang, Jiangbai and Cuo, Zha Xi Ping and Li, Kui and Gao, Guoyi and Yin, Ye and Wang, Wei and Zhang, Xiuqing and Xu, Xun and Yang, Huanming and Li, Yingrui and Wang, Jian and Wang, Jun and Nielsen, Rasmus},
+doi = {10.1038/nature13408},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Huerta-S{\'{a}}nchez et al. - 2014 - Altitude adaptation in Tibetans caused by introgression of Denisovan-like DNA.pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+month = {jul},
+title = {{Altitude adaptation in Tibetans caused by introgression of Denisovan-like DNA}},
+url = {http://www.nature.com/doifinder/10.1038/nature13408},
+year = {2014}
+}
+
+@article{Andres2009a,
+abstract = {Balancing selection is potentially an important biological force for maintaining advantageous genetic diversity in populations, including variation that is responsible for long-term adaptation to the environment. By serving as a means to maintain genetic variation, it may be particularly relevant to maintaining phenotypic variation in natural populations. Nevertheless, its prevalence and specific targets in the human genome remain largely unknown. We have analyzed the patterns of diversity and divergence of 13,400 genes in two human populations using an unbiased single-nucleotide polymorphism data set, a genome-wide approach, and a method that incorporates demography in neutrality tests. We identified an unbiased catalog of genes with signatures of long-term balancing selection, which includes immunity genes as well as genes encoding keratins and membrane channels; the catalog also shows enrichment in functional categories involved in cellular structure. Patterns are mostly concordant in the two populations, with a small fraction of genes showing population-specific signatures of selection. Power considerations indicate that our findings represent a subset of all targets in the genome, suggesting that although balancing selection may not have an obvious impact on a large proportion of human genes, it is a key force affecting the evolution of a number of genes in humans.},
+author = {Andr{\'{e}}s, Aida M. and Hubisz, Melissa J. and Indap, Amit and Torgerson, Dara G. and Degenhardt, Jeremiah D. and Boyko, Adam R. and Gutenkunst, Ryan N. and White, Thomas J. and Green, Eric D. and Bustamante, Carlos D. and Clark, Andrew G. and Nielsen, Rasmus},
+doi = {10.1093/molbev/msp190},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Andr{\'{e}}s et al. - 2009 - Targets of balancing selection in the human genome.pdf:pdf},
+issn = {07374038},
+journal = {Molecular Biology and Evolution},
+keywords = {Frequency-dependent selection,Heterosis,Human diversity,Human evolution,Overdominance,Population genetics},
+mendeley-groups = {Selection},
+pages = {2755--2764},
+pmid = {19713326},
+title = {{Targets of balancing selection in the human genome}},
+volume = {26},
+year = {2009}
+}
+
+@article{Daub2013,
+abstract = {Most approaches aiming at finding genes involved in adaptive events have focused on the detection of outlier loci, which resulted in the discovery of individually “significant” genes with strong effects. However, a collection of small effect mutations could have a large effect on a given biological pathway that includes many genes, and such a polygenic mode of adaptation has not been systematically investigated in humans. We propose here to evidence polygenic selection by detecting signals of adaptation at the pathway or gene set level instead of analyzing single independent genes. Using a gene-set enrichment test to identify genome-wide signals of adaptation among human populations, we find that most pathways globally enriched for signals of positive selection are either directly or indirectly involved in immune response. We also find evidence for long-distance genotypic linkage disequilibrium, suggesting functional epistatic interactions between members of the same pathway. Our results show that past interactions with pathogens have elicited widespread and coordinated genomic responses, and suggest that adaptation to pathogens can be considered as a primary example of polygenic selection.},
+author = {Daub, Josephine T. and Hofer, Tamara and Cutivet, Emilie and Dupanloup, Isabelle and Quintana-Murci, Lluis and Robinson-Rechavi, Marc and Excoffier, Laurent},
+doi = {10.1093/molbev/mst080},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Daub et al. - 2013 - Evidence for polygenic adaptation to pathogens in the human genome.pdf:pdf},
+isbn = {0737-4038},
+issn = {07374038},
+journal = {Molecular Biology and Evolution},
+keywords = {adaptation,epistasis,human evolution,pathway analysis,polygenic selection},
+number = {7},
+pages = {1544--1558},
+pmid = {23625889},
+title = {{Evidence for polygenic adaptation to pathogens in the human genome}},
+volume = {30},
+year = {2013}
+}
+
